--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sortablejs": "^1.8.0-rc1",
     "vue": "2.5.17",
     "vue-axios": "^2.1.4",
+    "vue-clipboard2": "^0.2.1",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
