--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "2.5.17",
     "vue-axios": "^2.1.4",
     "vue-clipboard2": "^0.2.1",
+    "vue-cron": "^1.0.9",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
